# ocpi_server

./: .dockerignore  .gitignore  Dockerfile  README.md  auto-docker.sh  main.py  pyproject.toml  requirements.txt
ocpi/: __init__.py  exceptions.py  managers.py
ocpi/managers/: __init__.py  credentials.py  locations.py  sessions.py  versions.py
ocpi/models/: __init__.py  credentials.py  internal.py  location.py  sessions.py  types.py
ocpi/namespaces/: __init__.py  credentials.py  internal.py  locations.py  sessions.py  versions.py
tests/integration_testing/: conftest.py  location.json  mock_flask_app.py  sessions.json  test_all_locations.py  test_all_sessions.py  test_locations.py  test_sessions.py
