[tool.poetry]
name = "ocpi-server"
version = "0.1.0"
description = ""
authors = ["Julian Fickers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-restx = "^1.3.0"
requests = "^2.31.0"
gunicorn = "^22.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = "tests"